--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Express.js TypeScript Tutorial",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev --respawn --transpile-only src/app.ts"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,12 @@
   "bugs": {
     "url": "https://github.com/ThomPoppins/Express-TypeScript-Tutorial/issues"
   },
-  "homepage": "https://github.com/ThomPoppins/Express-TypeScript-Tutorial#readme"
+  "homepage": "https://github.com/ThomPoppins/Express-TypeScript-Tutorial#readme",
+  "devDependencies": {
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
