--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/ThomPoppins/Express-TypeScript-Tutorial#readme",
   "devDependencies": {
+    "@types/express": "^4.17.18",
+    "@types/node": "^20.6.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
